# hometracker

./: .gitignore  Dockerfile  README.md  air_quality.py  app.py  check_influxdb2.py  compose.yml  config-app.json  config-plugins.json  config.json  db\database.db  dbdatabase.db  docker-compose.yml  influx_utils.py  logger.py  pyproject.toml  requirements.txt  speed_test.py  weather.py
.github/workflows/: example.yml  workflow.yml
db/: database.db
plugins/: air_quality.py  pollution.py  polution.py  speed_test.py  weather.py
plugins/docs/: index.html  search.js
plugins/docs/plugins/: air_quality.html  polution.html  speed_test.html  weather.html
static/: schema.sql
templates/: admin.html  base.html  db.html  env.html  index.html  log.html  run.html  scheduler.html  settings.html
tests/: check_test.py
utils/: influx2_utils.py  influx_utils.py  plugins.py  settings.py
